--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,15 @@
-<p style="color: green"><%= notice %></p>
 
-<%= render @event %>
+
+
+<%= @event.name %>
+<%= @event.description %>
+<%= @event.date %>
 
 <div>
-  <%= link_to "Edit this event", edit_event_path(@event) %> |
+  <% if user_signed_in? %>
+  <%= link_to "Edit this event", edit_event_path(@event) %> 
+<%= button_to "Destroy this event", @event, method: :delete %>
+  <% else %>
   <%= link_to "Back to events", events_path %>
-
-  <%= button_to "Destroy this event", @event, method: :delete %>
+  <% end %>
 </div>
