Asistencia a eventos. Modelo invitados, esquema en base de datos

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,6 +27,19 @@
   </div>
 
   <div>
+    <%# <% users_array = User.all.map {|user| [user.email]} %> 
+    
+    <%# <select name="users">
+    <% User.all.map do |user| if user.id != current_user.id  %>
+      <%# <option value="user"><%= user.email</option> %>
+      <%# <% end %>
+       <%# <% end %> 
+    <%# </select> %> 
+     
+    
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
