Lista de eventos creados y eventos en los que se participará en el perfil de los usuarios

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,4 @@
 
-<h1>Events</h1>
 
 <div id="events">
   <% @events.each do |event| %>
@@ -10,5 +9,6 @@
   <% end %>
 </div>
 
+<%= link_to "Profile", users_show_path %>
 
 
