--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,7 +20,8 @@
   <% if user_signed_in? %>
   <%= link_to "Edit this event", edit_event_path(@event) %> 
 <%= button_to "Destroy this event", @event, method: :delete %>
-<%= link_to "A",  attend_event_path %>
+<%= link_to "Attend",  attend_event_path %>
+<%= link_to "Un",  unatted_event_path, method: :delete %>
   <% else %>
   <%= link_to "Back to events", events_path %>
   <% end %>
