--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,16 +59,23 @@
         <div> <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class:"btn"%>
           
         </div>
+
+        <div class="d-flex align-items-center">
+        <div> 
+            <%= link_to "Profile", users_show_path, class:"btn" %>
+          
+        </div>
     <% else %>
       <div class="d-flex align-items-center">
         <div> <%= link_to "Log in", new_user_session_path, class:"btn"%>
           
         </div>
 
-  <% end %>
+
         <button type="button" class="btn btn-primary me-3">
           Sign up for free
         </button>
+          <% end %>
         <a
           class="btn"
           href="https://github.com/lucas-perata/events_private-"
