--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,82 @@
-<%= @user.email %> <br>
 
-<% if Event.any? %>
-<% @events.each do |e|%>
-<% if e.user_id == current_user.id %>
-<%= e.name %>
-<% end %>
-<% end %>
 
-<% else %>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container bootstrap snippets bootdey">
+<div class="row">
+  <div class="profile-nav col-md-3">
+      <div class="panel">
+          <div class="user-heading round">
+              <a href="#">
+                  <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
+              </a>
+              <h1><%= current_user.id%></h1>
+              <p><%= current_user.email %></p>
+          </div>
 
-<%= "no events" %>
+          <ul class="nav nav-pills nav-stacked">
+              <li class="active"><a href="#"> <i class="fa fa-user"></i> Profile</a></li>
+              <li><a href="#"> <i class="fa fa-calendar"></i> Recent Activity <span class="label label-warning pull-right r-activity">9</span></a></li>
+              <li><a href="#"> <i class="fa fa-edit"></i> Edit profile</a>
+                
+              </li>
+          </ul>
+      </div>
+  </div>
+  <div class="profile-info col-md-9">
+      <div class="panel">
+          
+              </ul>
+          </footer>
+      </div>
+      <div class="panel">
+          
+          <div class="panel-body bio-graph-info">
+              <h1>Personal info</h1>
+              <div class="row">
+                  <div class="bio-row">
+                      <p><span>First Name </span>: Camila</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Last Name </span>: Smith</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Country </span>: Australia</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Birthday</span>: 13 July 1983</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Occupation </span>: UI Designer</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Email </span>: jsmith@flatlab.com</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Mobile </span>: (12) 03 4567890</p>
+                  </div>
+                  <div class="bio-row">
+                      <p><span>Phone </span>: 88 (02) 123456</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div>
 
-<% end %>
-<br>
-<%= "Invitaciones" %>
-<br>
 
-<% @attendances.each do |at|%>
-<% if at.user_id == current_user.id %>
-<%= at.event.name %>
-<% end %>
-<% end %>
+    
+    <%= link_to "eventos", users_events_path, data: { turbo_frame: "events" }%>
+   
+
+   
+    <%= link_to "attendance", users_attendance_path, data: { turbo_frame: "events" } %>
+    
+    
+    <%= turbo_frame_tag "events" do %>
+    <div class="panel-body" id="events"> 
+    
+     </div>
+     <% end %>
+  </div>
+</div>
+</div>
+
