Show eventos desde profile

--- a/app/views/users/events.html.erb
+++ b/app/views/users/events.html.erb
@@ -1,19 +1,20 @@
     <%= turbo_frame_tag "events" do %>
     <%= turbo_stream.append  target="events" do %>
-  <div class="panel-body">
+  
             <h2>Your events:</h2>
           <div class="row">
           <% if Event.any? %>
             <% @events.each do |e|%>
             <% if e.user_id == current_user.id %>
+            
               <div class="col-md-6">
                   <div class="panel shadow p-3 mb-5 bg-white rounded">
                       <div class="panel-body">
                           
-                          <div class="bio-desk">
+                          <div class="bio">
                               <h4 class="red"><%= e.name %></h4>
-                              <p><%= e.description %></p>
-                              <p><%= e.date %></p>
+                              <p><%= render e %></p>
+                              <p><%= link_to "Show this event...", e, data:{turbo:false}%></p>
                           </div>
                       </div>
                   </div>
@@ -24,6 +25,6 @@
            
               </div>
           </div>
-      </div>
+   
     <% end %>
       <% end %>
