--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,26 +11,36 @@
 
 
 
-<% @event.attendances.each do |attend| %>
-<% attendandts = attend.user_id %>
-<%= User.find(attendandts).email %> <br>
-<% end %>
 
-<div>
-  <% if user_signed_in? %>
-  <%= link_to "Edit this event", edit_event_path(@event) %> 
-<%= button_to "Destroy this event", @event, method: :delete %>
-
-      <% if Attendance.find_by(user_id: current_user.id, event_id: @event.id).nil? %>
-           <%= link_to "Attend",  attend_event_path %>
     
-      <% else %>
-<%= link_to "Un",  unatted_event_path, method: :delete %>
-     
-     <% end %>
 
 
-  <% else %>
-  <%= link_to "Back to events", events_path %>
-  <% end %>
-</div>
+      <% @event.attendances.each do |attend| %>
+      <% attendandts = attend.user_id %>
+      <%= User.find(attendandts).email %> <br>
+      <% end %>
+
+<%= turbo_frame_tag "show" do %>
+    <%= turbo_stream.replace  target="show" do %>
+    
+      <div>
+        <% if user_signed_in? %>
+        <%= link_to "Edit this event", edit_event_path(@event) %> 
+      <%= button_to "Destroy this event", @event, method: :delete, data: {"turbo-frame" => "_top"} %>
+
+            <% if Attendance.find_by(user_id: current_user.id, event_id: @event.id).nil? %>
+                <%= link_to "Attend",  attend_event_path %>
+          
+            <% else %>
+      <%= link_to "Un",  unatted_event_path, method: :delete %>
+          
+          <% end %>
+
+
+        <% else %>
+        <%= link_to "Back to events", events_path %>
+        <% end %>
+      </div>
+
+<% end %>
+<% end %>
